--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,9 @@ chrono = "0.4.24"
 log = "0.4.17"
 env_logger = "0.10.0"
 fcm = "0.9.2"
+tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
+refinery = { version = "0.8.7", features = ["tokio-postgres"]}
+bb8 = "0.8.0"
+bb8-postgres = "0.8.1"
+num_cpus = "1.15.0"
+sha3 = "0.10.6"
