--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.70"
 hyper = { version = "1.0.0-rc.3", features = ["full"] }
 reqwest = "0.11.16"
 tokio = { version = "1", features = ["full"] }
+tokio-test = "0.4.2"
 http-body-util = "0.1.0-rc.2"
 serde_json = "1.0.95"
 serde = { version = "1.0.159", features = ["derive"] }
@@ -27,3 +28,4 @@ futures = "0.3.28"
 url = "2.3.1"
 string-builder = "0.2.0"
 lru = "0.10.0"
+once_cell = "1.17.1"
