--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ lazy_static = "1.4.0"
 chrono = "0.4.24"
 fcm = "0.9.2"
 tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
-refinery = { version = "0.8.7", features = ["tokio-postgres"]}
+refinery = { version = "0.8.8" }
 bb8 = "0.8.0"
 bb8-postgres = "0.8.1"
 num_cpus = "1.15.0"
